--- a/docs/{M=1}软件说明.md
+++ b/docs/{M=1}软件说明.md
@@ -1,8 +1,6 @@
 # 软件介绍
 
-删除此文档时请使用此名称:{M=1}软件说明
-
-**本软件是由PYLXU使用PHP开发的一套MD文档系统**
+**本软件是PYLXU使用PHP开发的一套MD文档系统**
 
 支持以下功能：
 1. 支持将MD文件展示为HTML给用户显示
@@ -10,25 +8,45 @@
 3. 支持可视化后台管理页面,编辑设置/文档更轻松
 4. 支持伪静态/GET参数双方式展示文档
 5. 支持启动安全入口,后台不泄露更安全
-6. 持续更新,安全保障
+6. 深色模式，观感新颖
+7. 插件系统,任意扩展
+8. 持续更新,安全保障
 
 # 快速上手
 
-**功能说明请查看"功能测试"示例文档**
-
 ## 下载应用
 
-下载方式1-通过**Github**下载 **[构建页面]({{set('GithubURL')}})** 
-访问后选择一个版本下载。
+本地下载：
+**
+[快速安装程序(推荐)](https://docs.3r60.top/Project/download.php)
+[新版升级包](https://docs.3r60.top/Project/RisDocs_Update.php)
+[全新安装包](https://docs.3r60.top/Project/RisDocs_Full.php)
+**
+
 
 ### 注意事项
 
-- 本网站软件使用PHP，请确保您的服务器存在PHP环境
+1. 本网站软件使用PHP，请确保您的服务器存在PHP环境
+2. PHP要求版本： PHP7 暂不支持PHP8
 
 ## 安装应用
 
-下载install.php后复制到您网站需要的目录访问即可
-访问后按照要求填写信息并点击"下载并安装"即可
+### 快速安装程序（推荐）
+
+*此文件同时适用安装/更新本程序
+
+1. 点击下载[快速安装程序(推荐)](https://docs.3r60.top/Project/download.php)
+2. 将下载的install.php文件复制到你目标网站的主目录
+3. 浏览器访问 https://您的域名/install.php
+4. 输入您的网站名称与验证密码后即可自动跳转到首页
+
+### 升级包
+
+若您之前已安装过此程序，下载[新版升级包](https://docs.3r60.top/Project/RisDocs_Update.php)后直接解压到您之前安装的网站即可
+
+### 完整安装包
+
+若你之前未安装过，下载[全新安装包](https://docs.3r60.top/Project/RisDocs_Full.php)后解压至目标网站，随后访问https://您的域名/admin.php 默认密码为RIS_DOCS，访问后点击顶部的“站点设置”修改您的网站信息即可
 
 目录框架：
 
