--- a/docs/功能测试.md
+++ b/docs/功能测试.md
@@ -1,10 +1,18 @@
 # 功能测试
 
-支持以下功能：  
-1.显示网站配置中的变量  
-网站名称[WebName]:{{set('WebName')}}  
-更新日期[UpdateTime]:{{set('UpdateTime')}}  
-2.在文档中引入目录  
-{{include('directory')}}  
-3.在文件内引入另一个文件[举例首页,未避免重复引用,多层嵌套禁用]  
-{{include('docs/home.md')}}  
+支持以下功能：
+一、引入功能
+1.显示网站配置中的变量
+网站名称[WebName]:{{set('WebName')}}
+网站版权[copyRight]:{{set('copyRight')}}
+自定义变量通过内置的插件“文章常量”实现
+
+------------
+
+2.在文档中引入目录
+{{include('directory')}}
+
+------------
+
+3.在文件内引入另一个文件[举例首页,为避免重复引用,多层嵌套禁用]
+{{include('docs/home.md')}}
