RisDocs 已修复问题汇总： 1.顶栏链接错误激活（已修复） 2.更新文章时左侧分类指向不正确（已修复） 3.首次进入编辑页编辑器加载失败（已修复） 4.主页顶栏点击时误判不是同类型页面（已修复）
新功能：
1.当分类内只有一个文章时不展示侧栏与目录

2.默认版权信息时间改为2025
3.完善说明文档
https://docs.3r60.top/Project/?article=default/%7BM%3D1%7D%E8%BD%AF%E4%BB%B6%E8%AF%B4%E6%98%8E

--- a/docs/default/{M=1}软件说明.md
+++ b/docs/default/{M=1}软件说明.md
@@ -12,6 +12,11 @@
 6. 深色模式，观感新颖
 7. 插件系统,任意扩展
 8. 持续更新,安全保障
+9. 支持多分类管理文档
+10. 支持文档搜索功能
+11. 支持文章权重排序
+12. 支持TOC目录自动生成
+13. 在线Markdown编辑器，支持实时预览
 
 # 快速上手
 
@@ -27,6 +32,9 @@
 1. 本网站软件使用PHP，请确保您的服务器存在PHP环境
 2. PHP要求版本： PHP7 与 PHP 8
 3. PHP 8 推荐安装zip扩展，未安装时插件商店不支持自动解压
+4. 确保网站目录有写入权限
+5. 建议开启伪静态以获得更好的URL体验
+6. 非门户文档名称不能为“home”或“index”
 
 ## 安装应用
 
@@ -39,11 +47,118 @@
 3. 浏览器访问 https://您的域名/install.php
 4. 输入您的网站名称与验证密码后即可自动跳转到首页
 
+### 完整包
+
+*此文件只适用于首次安装
+
+1. 点击下载[完整文件](https://docs.3r60.top/Project/RisDocs_Full.zip)
+2. 解压到指定目录
+
+### 升级包
+
+*此文件只适用于升级
+
+1. 点击下载[升级包](https://docs.3r60.top/Project/RisDocs_Update.zip)
+2. 解压到指定目录
+
 ## 后台管理
 
-未启用安全入口时，点击右上方小齿轮后点击后台管理，随后输入您的管理员密码即可
+### 基本使用
+
+1. 访问方式：
+   - 未启用安全入口：直接访问 admin.php
+   - 启用安全入口：访问 admin.php?SE=您设置的安全入口值
+
+2. 主要功能：
+   - 站点设置：配置网站名称、密码、版权信息等
+   - 文档编辑：支持多分类管理，在线编辑文档
+   - 插件管理：安装、配置和管理插件
+
+### 文档编辑
+
+1. 文档分类：
+   - 支持创建多个分类，便于文档分类管理
+   - 分类支持独立目录结构
+   - 每个分类下可以包含多个文档和子目录
+   - 分类可以单独设置访问权限（通过插件实现）
+   - 支持在分类之间移动文档
+   - 可以为每个分类创建独立的首页（index.md）
+   - 分类支持显示名称自定义（默认使用目录名）
+   - "默认分类"（default）用于存放基础文档
+
+2. 分类操作：
+   - 创建分类：点击"新分类"按钮，输入分类名称
+   - 删除分类：删除分类下所有文档后自动删除分类
+   - 移动文档：编辑文档时可选择目标分类
+   - 批量管理：支持批量移动文档到其他分类
+   - 分类导航：顶部导航栏自动显示所有分类
+
+3. 分类建议：
+   - 建议使用有意义的分类名称
+   - 重要的基础文档放入默认分类
+   - 每个分类的最低页面为分类首页，自动展示当页内容
+   - 合理规划分类层级，避免过深
+   - 定期整理分类内容，保持结构清晰
+
+2. Markdown编辑器：
+   - 实时预览
+   - 支持图片上传
+   - 支持快捷键（Ctrl+S保存）
+   - TOC目录自动生成
+
+3. 特殊标记：
+   - {M=数字} 设置文档权重，数字越大排序越靠前（文档名称）
+   - {\{include('文件路径')}} 引入其他文件内容（注意删除其中\符号）（文档内容）
+   - {{set('变量名')}} 引用配置变量（文档内容）
+
+### 插件系统
+
+1. 插件商店：
+   - 在线浏览和安装插件
+   - 自动检测版本更新
+   - 一键安装升级
+
+2. 插件管理：
+   - 可视化配置界面
+   - 支持启用/禁用插件
+   - 插件独立配置保存
+
+### 进阶功能
+
+1. 伪静态设置：
+   - 支持开启伪静态获得更好的URL体验
+   - 需要配置服务器伪静态规则
+
+2. 安全设置：
+   - 支持设置后台安全入口
+   - 密码使用加密存储
+   - 可限制上传文件类型
+
+3. 主题定制：
+   - 支持深色/浅色模式切换
+   - 可通过CSS自定义样式
+
+## 疑难解答
+
+1. 图片上传失败：
+   - 检查目录权限
+   - 检查PHP配置的上传限制
+   - 确认图片格式是否支持
+
+2. 插件无法安装：
+   - PHP 8环境确认是否安装zip扩展
+   - 检查目录写入权限
+   - 确认网络连接正常
+
+3. 访问404：
+   - 检查伪静态配置是否正确
+   - 确认文档路径正确
+   - 检查文件名大小写
 
 ### 版权声明
 
-全部代码均由PYLXU开发更多疑问请咨询QQ 753307914
+全部代码均由PYLXU开发
+更多疑问请咨询QQ 753307914
+
+文档系统开源地址：[https://github.com/PYLXU/Ris-Docs](https://github.com/PYLXU/Ris-Docs)
 
