升级到 2.4.2 修复 toc、footer、main.padding

--- a/docs/default/{M=1}软件说明.md
+++ b/docs/default/{M=1}软件说明.md
@@ -30,7 +30,7 @@
 ### 注意事项
 
 1. 本网站软件使用PHP，请确保您的服务器存在PHP环境
-2. PHP要求版本： PHP7 与 PHP 8
+2. PHP要求版本： PHP7.4（推荐） 与 PHP 8
 3. PHP 8 推荐安装zip扩展，未安装时插件商店不支持自动解压
 4. 确保网站目录有写入权限
 5. 建议开启伪静态以获得更好的URL体验
